# aoc

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  Task.cpp  Task.hpp  download_puzzle.py  main.cpp  requirements.txt
.github/workflows/: main.yml
2020/: 2020.hpp
2020/01/: 01.cpp
2020/02/: 02.cpp
2020/03/: 03.cpp
2020/04/: 04.cpp
2020/05/: 05.cpp
2020/06/: 06.cpp
2020/07/: 07.cpp
2020/08/: 08.cpp
2020/10/: 10.cpp
2020/13/: 13.cpp
2020/14/: 14.cpp
2020/15/: 15.cpp
2020/16/: 16.cpp
2021/01/: 01.cpp
2021/03/: 03.cpp
2021/04/: 04.cpp
2021/05/: 05.cpp
2021/06/: 06.cpp
puzzles/: headers.hpp
puzzles/2020/: 2020.hpp
puzzles/2020/01/: 01.cpp
puzzles/2020/03/: 03.cpp
puzzles/2020/04/: 04.cpp
puzzles/2020/05/: 05.cpp
puzzles/2020/06/: 06.cpp
puzzles/2020/07/: 07.cpp
puzzles/2020/09/: 09.cpp
puzzles/2020/12/: 12.cpp
puzzles/2020/13/: 13.cpp
puzzles/2020/14/: 14.cpp
puzzles/2020/15/: 15.cpp
puzzles/2021/: 2021.hpp
puzzles/2021/01/: 01.cpp
puzzles/2021/03/: 03.cpp
puzzles/2021/04/: 04.cpp
puzzles/2021/05/: 05.cpp
puzzles/2021/06/: 06.cpp
puzzles/2021/07/: 07.cpp
puzzles/2021/08/: 08.cpp
puzzles/2021/09/: 09.cpp
puzzles/2021/10/: 10.cpp
puzzles/2021/11/: 11.cpp
puzzles/2021/12/: 12.cpp
puzzles/2021/13/: 13.cpp
puzzles/2021/14/: 14.cpp
puzzles/2021/15/: 15.cpp
puzzles/2021/16/: 16.cpp
puzzles/2021/17/: 17.cpp
puzzles/2021/18/: 18.cpp
puzzles/2021/20/: 20.cpp
puzzles/2021/21/: 21.cpp
puzzles/2022/: 2022.hpp
puzzles/2022/01/: 01.cpp
puzzles/2022/02/: 02.cpp
puzzles/2022/03/: 03.cpp
puzzles/2022/04/: 04.cpp
puzzles/2022/05/: 05.cpp
puzzles/2022/06/: 06.cpp
puzzles/2022/07/: 07.cpp
puzzles/2022/08/: 08.cpp
puzzles/2022/09/: 09.cpp
puzzles/2022/10/: 10.cpp
puzzles/2022/11/: 11.cpp
puzzles/2022/12/: 12.cpp
puzzles/2022/13/: 13.cpp
puzzles/2022/14/: 14.cpp
puzzles/2022/15/: 15.cpp
puzzles/2022/16/: 16.cpp
puzzles/2022/17/: 17.cpp
puzzles/2022/18/: 18.cpp
puzzles/2022/19/: 19.cpp
puzzles/2022/20/: 20.cpp
puzzles/2022/21/: 21.cpp
puzzles/2022/22/: 22.cpp
puzzles/2022/23/: 23.cpp
puzzles/2022/24/: 24.cpp
puzzles/2022/25/: 25.cpp
puzzles/2023/: 2023.hpp
src/: Task.cpp  Task.hpp  main.cpp  utils.cpp  utils.hpp
src/2020/: 2020.hpp
src/2020/01/: 01.cpp
src/2021/: 2021.hpp
src/2022/: 2022.hpp
(+61 files in other folders)
